# apple-music-manager

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  SPEC.md  pyproject.toml
.github/workflows/: ci.yml
cloudflare-worker/: wrangler.toml
cloudflare-worker/src/: index.js
music_manager/: __init__.py  __main__.py
music_manager/cli/: __init__.py  exportify_process_csv.py  home.py  import_cancel.py  import_cmd.py  lock.py  play.py  play_playlist.py  playlist_local_tracks.py  playlist_tracks.py  search.py  search_playlists.py  shuffle.py  spotify_auth_status.py  spotify_login.py  spotify_logout.py  spotify_playlist_tracks.py  spotify_playlists.py  spotify_set_client_id.py  status.py
music_manager/core/: checks.py  config.py  io.py  logger.py  models.py  normalize.py  profile.py  setup.py
music_manager/options/: complete_albums.py  export.py  find_duplicates.py  fix_metadata.py  identify.py  import_tracks.py  maintenance.py  modify_track.py  recommendations.py  snapshot.py
music_manager/pipeline/: dedup.py  executor.py  importer.py  recommend.py
music_manager/services/: albums.py  apple.py  health.py  lastfm.py  log_uploader.py  playlist_covers.py  recommendations_store.py  resolver.py  signals.py  spotify.py  tagger.py  tracks.py  version.py  youtube.py
music_manager/ui/: app.py  render.py  styles.py  text.py  theme.css
music_manager/ui/screens/: _complete.py  _core.py  _duplicates.py  _export.py  _fix_metadata.py  _identify.py  _import.py  _maintenance.py  _modify.py  _preview.py  _protocol.py  _recommendations.py  _review.py  (+5 more)
tests/: conftest.py  test_app_sync.py  test_cli_exportify_process_csv.py  test_cli_home.py  test_cli_import_cancel.py  test_cli_import_cmd.py  test_cli_lock.py  test_cli_play.py  test_cli_play_playlist.py  test_cli_playlist_local_tracks.py  test_cli_playlist_tracks.py  test_cli_search.py  test_cli_search_playlists.py  test_cli_shuffle.py  test_cli_spotify_auth_status.py  test_cli_spotify_login.py  test_cli_spotify_logout.py  test_cli_spotify_playlist_tracks.py  test_cli_spotify_playlists.py  test_cli_spotify_set_client_id.py  test_cli_status.py  test_core_checks.py  test_core_config.py  test_core_io.py  test_core_logger.py  test_core_models.py  test_core_normalize.py  test_core_profile.py  test_core_setup.py  test_dedup_exhaustive.py  test_dedup_isrc_case.py  test_e2e.py  test_e2e_full_pipeline.py  test_fix_maintenance_critical.py  test_fix_metadata_apply.py  test_fix_metadata_save.py  test_identify_exhaustive.py  test_identify_scenarios.py  test_import_exhaustive.py  test_import_isrc_case.py  (+53 more)
(+4 files in other folders)
