[project]
name = "music-manager"
version = "0.1.0"
description = "Import de morceaux dans Apple Music via CSV."
requires-python = ">=3.11"
dependencies = [
    "textual>=3.0",             # UI terminal
    "mutagen>=1.47",            # tagging audio
    "requests>=2.31",           # HTTP (Deezer, iTunes, covers)
    "musicbrainzngs>=0.7",      # fallback silencieux
    "rapidfuzz>=3.14.5",
]

[project.scripts]
music-manager = "music_manager.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.9",
    "textual-dev>=1.7",         # outils debug Textual (console, devtools)
    "pytest-asyncio>=0.25",     # Textual est async, les tests aussi
]

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "PLC", "PLE", "PLW"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build" 
