[project]
name = "music-manager"
version = "1.0.3"
description = "Import tracks into Apple Music with HD artwork and official audio."
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "textual>=3.0",             # UI terminal
    "mutagen>=1.47",            # tagging audio (M4A + MP3)
    "requests>=2.31",           # HTTP (Deezer, iTunes, covers)
    "rapidfuzz>=3.14.5",        # fuzzy matching
    "pyobjc-framework-iTunesLibrary>=11.0",  # Apple Music scan (macOS)
]

[project.urls]
Homepage = "https://github.com/ThomasDumont01/apple-music-manager"
Repository = "https://github.com/ThomasDumont01/apple-music-manager"
Issues = "https://github.com/ThomasDumont01/apple-music-manager/issues"
Download = "https://github.com/ThomasDumont01/apple-music-manager/releases/latest"

[project.scripts]
music-manager = "music_manager.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.9",
    "textual-dev>=1.7",         # outils debug Textual (console, devtools)
    "pytest-asyncio>=0.25",     # Textual est async, les tests aussi
    "pyright>=1.1.409",
    "bandit>=1.9.4",
    "pytest-cov>=7.1.0",
]

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "PLC", "PLE", "PLW"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = ["integration: tests requiring Apple Music and real audio files"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
